--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,3 +6,5 @@ set(CMAKE_CXX_STANDARD 17)
 add_executable(algo sandbox.c vector.c set.c functions.c)
 set_target_properties(algo PROPERTIES LINKER_LANGUAGE C)
 target_compile_options(algo PRIVATE -Wno-format)
+
+add_executable(functional functional/main.cpp)
