--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -40,4 +40,4 @@ jobs:
     - name: Test
       working-directory: ${{github.workspace}}/build
       shell: bash
-      run: ls
+      run: ./bin/algo
