--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,12 @@
-# RUN: cmake --configure .
 cmake_minimum_required(VERSION 3.20)
 
 project(Algorithms)
 set(CMAKE_CXX_STANDARD 20)
 add_compile_options(-Wformat=0)
 
-add_executable(algo main.cpp structures/Vector.h structures/ArrayStack.h structures/DList.h structures/ArrayDeque.h structures/SkiplistSet.h system/Operations.cpp system/Operations.h system/utils/FileDescriptor.cpp system/utils/FileDescriptor.h system/utils/Logging.cpp system/utils/Logging.h system/utils/Environment.cpp system/utils/Environment.h system/Memory.h system/utils/Auth.cpp system/utils/Auth.h)
+set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY lib)
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY bin)
+
+set(sources src/structures/Vector.h src/structures/BlockStorage.h src/structures/ArrayStack.h src/structures/DList.h src/structures/ArrayDeque.h src/structures/SkiplistSet.h src/experiments/Operations.cpp src/experiments/Operations.h src/system/FileDescriptor.cpp src/system/FileDescriptor.h src/experiments/Logging.cpp src/experiments/Logging.h src/system/Environment.cpp src/system/Environment.h src/experiments/Memory.h src/system/Auth.cpp src/system/Auth.h)
+add_executable(algo main.cpp ${sources})
+add_library(gush STATIC ${sources})
